# vaultsign

./: CONTRIBUTING.md  README.md  SECURITY.md  cert_utils.py  config.py  install.sh  logger.py  pyproject.toml  tray.py  tray_helper.py  updater.py  vault_backend.py  vaultsign  vaultsign.1  vaultsign.desktop  vaultsign_gui.py
.github/workflows/: ci.yml
docs/: ui-redesign.md
packaging/: io.github.dem0n1337.vaultsign.metainfo.xml  io.github.dem0n1337.vaultsign.yml  vaultsign.spec
tests/: test_cert_utils.py  test_config.py  test_updater.py  test_vault_backend.py
