[project]
name = "vaultsign"
version = "2.0.0"
description = "HashiCorp Vault OIDC Authentication & SSH Key Signing"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "dem0n1337" }]
readme = "README.md"
keywords = ["vault", "ssh", "oidc", "signing", "gtk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]

[project.urls]
Homepage = "https://github.com/dem0n1337/vaultsign"
Issues = "https://github.com/dem0n1337/vaultsign/issues"

[project.scripts]
vaultsign = "vaultsign_gui:main"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S"]
ignore = ["S603", "S607"]  # subprocess calls are intentional

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
